kb8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birxbackend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: birxbackend
  template:
    metadata:
      labels:
        app: birxbackend
    spec:
      containers:
        - name: birxbackend
          image: shahabuddinakhon/backendbirx:latest
          ports:
            - containerPort: 8000
