kb8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birxbackend-service
spec:
  selector:
    app: birxbackend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
