kb8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: birxbackend-ingress
spec:
  rules:
    - host: 135.237.77.196.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: birxbackend-service
                port:
                  number: 80
